spinners and profile page

--- a/frontend/CarRental/src/app/components/header/header.component.html
+++ b/frontend/CarRental/src/app/components/header/header.component.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="nav-button">
-        <button>Profil</button>
+        <button [routerLink]="['/profil']">Profil</button>
         <button>Wyloguj</button>
       </div>
     </div>
