--- a/frontend/CarRental/src/app/users/browse-users/browse-users.component.html
+++ b/frontend/CarRental/src/app/users/browse-users/browse-users.component.html
@@ -2,9 +2,7 @@
   <div class="form-container border-round-3xl">
     <div class="grid">
       <div class="col-8">
-        <p class="text-3xl font-bold ml-6 text-primary">
-          Przeglądaj użytkowników
-        </p>
+        <p class="text-3xl font-bold ml-6">Przeglądaj użytkowników</p>
       </div>
       <div class="col-4">
         <p-iconField iconPosition="right">
