--- a/frontend/CarRental/src/app/employee/reservations/reservations.component.html
+++ b/frontend/CarRental/src/app/employee/reservations/reservations.component.html
@@ -43,12 +43,14 @@
                     label="Wypożycz"
                     class="vertical-align-middle w-6rem test"
                     (onClick)="onRentVehicle(reservation)"
+                    [disabled]="reservation.reserved"
                   />
                   <div class="mt-2">
                     <p-button
                       label="Anuluj rezerwację"
                       class="vertical-align-middle"
                       (onClick)="onCancelReservation(reservation)"
+                      [disabled]="reservation.reserved"
                     />
                   </div>
                 </div>
