--- a/frontend/CarRental/src/app/employee/reservations/reservations.component.html
+++ b/frontend/CarRental/src/app/employee/reservations/reservations.component.html
@@ -31,7 +31,7 @@
                 <p>Marka: {{ reservation.brand }}</p>
                 <p>Model: {{ reservation.model }}</p>
                 <p>
-                  Okres wypożyczenia: {{ reservation.startTime }} -
+                  Okres rezerwacji: {{ reservation.startTime }} -
                   {{ reservation.endTime }}
                 </p>
               </div>
