empolyee id fix

--- a/frontend/CarRental/src/app/login/login.component.html
+++ b/frontend/CarRental/src/app/login/login.component.html
@@ -21,7 +21,7 @@
           <div class="flex flex-column h-5rem mt-2">
             <input
               class="h-3rem w-20rem"
-              type="text"
+              type="password"
               pInputText
               placeholder="Hasło"
               formControlName="password"
