--- a/frontend/CarRental/src/app/profile/profile.component.scss
+++ b/frontend/CarRental/src/app/profile/profile.component.scss
@@ -1,7 +1,8 @@
 .form-container {
   background-color: var(--gray-300);
   width: 50%;
-  min-height: 50vh;
+
+  height: 520px;
 }
 
 ::ng-deep .p-dropdown {
