--- a/frontend/CarRental/src/app/login/login.component.html
+++ b/frontend/CarRental/src/app/login/login.component.html
@@ -25,6 +25,7 @@
               pInputText
               placeholder="Hasło"
               formControlName="password"
+              autocomplete="off"
             />
             <p
               *ngIf="isControlValid('password')"
