--- a/frontend/CarRental/src/app/profile/profile.component.html
+++ b/frontend/CarRental/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
       <div class="col-12 text-center">
         <p class="text-4xl font-bold">Profil</p>
       </div>
-      <ng-container *ngIf="isLoading; else loading">
+      <ng-container *ngIf="!isLoading; else loading">
         <form [formGroup]="form">
           <div class="flex">
             <div class="col-6 flex justify-content-center flex-wrap">
@@ -62,6 +62,7 @@
                   pInputText
                   formControlName="password"
                   placeholder="Hasło"
+                  autocomplete="off"
                 />
                 <p
                   *ngIf="isControlValid('password')"
@@ -75,15 +76,13 @@
           <div class="col-12 flex justify-content-center flex-wrap">
             <div class="flex flex-column h-3rem mt-4">
               <ng-container *ngIf="roleLogged$ | async as role">
-                <ng-container *ngIf="role == userRole">
-                  <h2>Zalogowany jako: Użytkownik</h2>
+                <ng-container [ngSwitch]="role">
+                  <h2 *ngSwitchCase="userRole">Zalogowany jako: Użytkownik</h2>
+                  <h2 *ngSwitchCase="adminRole">
+                    Zalogowany jako: Administrator
+                  </h2>
+                  <h2 *ngSwitchCase="keeperRole">Zalogowany jako: Opiekun</h2>
                 </ng-container>
-                <ng-container *ngIf="role == adminRole">
-                  <h2>Zalogowany jako: Administrator</h2></ng-container
-                >
-                <ng-container *ngIf="role == keeperRole">
-                  <h2>Zalogowany jako: Opiekun</h2></ng-container
-                >
               </ng-container>
             </div>
           </div>
