--- a/frontend/CarRental/src/app/employee/rentals/rentals.component.html
+++ b/frontend/CarRental/src/app/employee/rentals/rentals.component.html
@@ -25,8 +25,8 @@
           <div *ngFor="let rental of rentals">
             <div class="vehicle-container border-round-3xl flex">
               <div class="col-8 font-semibold ml-5">
-                <p>Marka: {{ rental.Brand }}</p>
-                <p>Model: {{ rental.Model }}</p>
+                <p>Marka: {{ rental.brand }}</p>
+                <p>Model: {{ rental.model }}</p>
                 <p>Identyfikator: {{ rental.id }}</p>
                 <p>
                   Okres wypożyczenia: {{ rental.startTime }} -
